# PNG-Decoder

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  PNG_IDAT_Dynamic_Examples.txt  PNG_IDAT_Examples.txt  README.md  adler32.h  crc.c  crc.h  decompress.c  decompress.h  filter.c  filter.h  image decoding notes  image.c  image.h  main.c  png.c  png_utils.h
include/: adler32.h  crc.h  filter.h  logger.h  md5.h  png.h  png_utils.h  zlib.h
src/: CMakeLists.txt  Makefile  filter.c  logger.c  main.c  mingw.cmake  png.c  zlib.c
test/: CMakeLists.txt  Makefile  main.c
test/include/: filter_tests.h  test_utils.h  zlib_tests.h
test/src/: filter_tests.c  test_utils.c  zlib_tests.c
